# noru

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PHASE3_PLAN.md  PLAN.md  README.md  ROADMAP.md
.claude/: settings.json
.claude/agents/: noru-auth-ai.md  noru-detect.md  noru-settings-ui.md  noru-storage.md  noru-transcript-ui.md
.github/workflows/: build.yml
src/: audio.rs  main.rs  models.rs  transcribe.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: tray-idle.rgba  tray-recording.rgba
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: ai.rs  auth.rs  commands.rs  detect.rs  lib.rs  main.rs  orchestrator.rs  prefs.rs  storage.rs  types.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  api.ts  styles.css
ui/src/components/: AIPanel.tsx
ui/src/views/: Settings.tsx  TranscriptList.tsx  TranscriptViewer.tsx
ui/src/views/settings/: AIFeatures.tsx  General.tsx  Recording.tsx  Whisper.tsx  widgets.tsx
